// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Survey Admin should create survey [Mutation] 1`] = `
Object {
  "createSurvey": Object {
    "survey": Object {
      "creator": Object {
        "firstName": "Jane",
      },
      "description": "TestDescription",
      "domains": null,
      "isActive": false,
      "questions": null,
      "title": "TestSurvey",
      "types": null,
    },
  },
}
`;

exports[`Survey Admin should return all surveys [Query] 1`] = `
Object {
  "surveys": Array [
    Object {
      "creator": Object {
        "firstName": "John",
      },
      "description": "Eine wissenschaftliche Umfrage mit der Forschungsfrage: \\"Wie verhalten sich Informatiker?\\"",
      "domains": Array [
        Object {
          "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
        },
      ],
      "isActive": false,
      "questions": Array [
        Object {
          "id": "c237a33fc025101813b9bb9fbafe22fd9d53dbd110f48cec951fbeaf34ff3622",
        },
        Object {
          "id": "50ffe7d198c0f5dabda06fbb6db3ed4751eb2a1eb8032ac65bea6dbd4d68150a",
        },
        Object {
          "id": "b3c6a227951ed7b707222be79338c50c41ab7e51213551aabe48e0ee2148cbb6",
        },
        Object {
          "id": "534c13385adba70a40f9b898396e959e668dd1e0dc1e7de4c61c14d668965184",
        },
        Object {
          "id": "66ccc956897f52437656ba7e5588872baf213035f3a47a8bbae2b51289653078",
        },
        Object {
          "id": "2e26805e909bd52bf6aa07d4edce45575d6ba6f56e32b71f7466cda92f3ab76e",
        },
      ],
      "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      "types": Array [
        "CHOICE",
        "LIKE",
        "LIKEDISLIKE",
        "REGULATOR",
        "FAVORITE",
        "RANKING",
      ],
    },
    Object {
      "creator": Object {
        "firstName": "Jane",
      },
      "description": "Eine wissenschaftliche Umfrage mit der Forschungsfrage: \\"Künstliche Intelligenz?",
      "domains": Array [
        Object {
          "id": "624497235d090cf74bd2473155d6d65fb9f9395ec018192d181387e20f4cbf10",
        },
      ],
      "isActive": false,
      "questions": Array [
        Object {
          "id": "fd0dca1800e20d92ed5e3c01fafbd5f45b26f57d6e5118506eaf9eca7407e833",
        },
        Object {
          "id": "e657e852e504aceed834f2a001b0e5f0190e4f84730906990c6e6207769db48a",
        },
        Object {
          "id": "77bda58fad59e0b68a58f7b92cd4be87618046657ed45a965b23091d39203b2b",
        },
        Object {
          "id": "51593cf78e9828f700aa86f2d400e0497676610be878089d2268b1715d2ce980",
        },
        Object {
          "id": "0db66302ab707ff4cb22d52c7bf09fc238713dbcc9f0998c839162671df9c85b",
        },
        Object {
          "id": "b49c447e06d23454ba1b365c8884e8ca363575ae671dca4eb7fd78eaa3eca54e",
        },
      ],
      "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
      "types": Array [
        "FAVORITE",
        "LIKE",
        "LIKEDISLIKE",
        "RANKING",
      ],
    },
    Object {
      "creator": Object {
        "firstName": "Jake",
      },
      "description": "Eine wissenschaftliche Umfrage mit der Forschungsfrage: \\"Künstliche Intelligenz?",
      "domains": Array [
        Object {
          "id": "9f3b5b94695bd9255db28ec93e5114ca0e6ccf7af668ca086af18c9b3a8eaa63",
        },
      ],
      "isActive": true,
      "questions": null,
      "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik (Kopie)\\"",
      "types": Array [
        "FAVORITE",
        "LIKE",
        "LIKEDISLIKE",
        "RANKING",
      ],
    },
  ],
}
`;

exports[`Survey Admin should return survey not owned by User [Query] 1`] = `
Object {
  "survey": Object {
    "creator": Object {
      "firstName": "John",
    },
    "description": "Eine wissenschaftliche Umfrage mit der Forschungsfrage: \\"Wie verhalten sich Informatiker?\\"",
    "domains": Array [
      Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
    ],
    "isActive": false,
    "questions": Array [
      Object {
        "id": "c237a33fc025101813b9bb9fbafe22fd9d53dbd110f48cec951fbeaf34ff3622",
      },
      Object {
        "id": "50ffe7d198c0f5dabda06fbb6db3ed4751eb2a1eb8032ac65bea6dbd4d68150a",
      },
      Object {
        "id": "b3c6a227951ed7b707222be79338c50c41ab7e51213551aabe48e0ee2148cbb6",
      },
      Object {
        "id": "534c13385adba70a40f9b898396e959e668dd1e0dc1e7de4c61c14d668965184",
      },
      Object {
        "id": "66ccc956897f52437656ba7e5588872baf213035f3a47a8bbae2b51289653078",
      },
      Object {
        "id": "2e26805e909bd52bf6aa07d4edce45575d6ba6f56e32b71f7466cda92f3ab76e",
      },
    ],
    "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
    "types": Array [
      "CHOICE",
      "LIKE",
      "LIKEDISLIKE",
      "REGULATOR",
      "FAVORITE",
      "RANKING",
    ],
  },
}
`;

exports[`Survey Admin should return survey owned by User [Query] 1`] = `
Object {
  "survey": Object {
    "creator": Object {
      "firstName": "Jane",
    },
    "description": "Eine wissenschaftliche Umfrage mit der Forschungsfrage: \\"Künstliche Intelligenz?",
    "domains": Array [
      Object {
        "id": "624497235d090cf74bd2473155d6d65fb9f9395ec018192d181387e20f4cbf10",
      },
    ],
    "isActive": false,
    "questions": Array [
      Object {
        "id": "fd0dca1800e20d92ed5e3c01fafbd5f45b26f57d6e5118506eaf9eca7407e833",
      },
      Object {
        "id": "e657e852e504aceed834f2a001b0e5f0190e4f84730906990c6e6207769db48a",
      },
      Object {
        "id": "77bda58fad59e0b68a58f7b92cd4be87618046657ed45a965b23091d39203b2b",
      },
      Object {
        "id": "51593cf78e9828f700aa86f2d400e0497676610be878089d2268b1715d2ce980",
      },
      Object {
        "id": "0db66302ab707ff4cb22d52c7bf09fc238713dbcc9f0998c839162671df9c85b",
      },
      Object {
        "id": "b49c447e06d23454ba1b365c8884e8ca363575ae671dca4eb7fd78eaa3eca54e",
      },
    ],
    "title": "Öffentliche Umfrage im Rahmen des Modules \\"Computerethik\\"",
    "types": Array [
      "FAVORITE",
      "LIKE",
      "LIKEDISLIKE",
      "RANKING",
    ],
  },
}
`;

exports[`Survey Admin should update survey not owned by User [Mutation] 1`] = `
Object {
  "updateSurvey": Object {
    "survey": Object {
      "creator": Object {
        "firstName": "John",
      },
      "description": "UpdatedSurveyDescription",
      "domains": Array [
        Object {
          "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
        },
      ],
      "isActive": false,
      "questions": Array [
        Object {
          "id": "c237a33fc025101813b9bb9fbafe22fd9d53dbd110f48cec951fbeaf34ff3622",
        },
        Object {
          "id": "50ffe7d198c0f5dabda06fbb6db3ed4751eb2a1eb8032ac65bea6dbd4d68150a",
        },
        Object {
          "id": "b3c6a227951ed7b707222be79338c50c41ab7e51213551aabe48e0ee2148cbb6",
        },
        Object {
          "id": "534c13385adba70a40f9b898396e959e668dd1e0dc1e7de4c61c14d668965184",
        },
        Object {
          "id": "66ccc956897f52437656ba7e5588872baf213035f3a47a8bbae2b51289653078",
        },
        Object {
          "id": "2e26805e909bd52bf6aa07d4edce45575d6ba6f56e32b71f7466cda92f3ab76e",
        },
      ],
      "title": "RenamedTestSurvey",
      "types": Array [
        "CHOICE",
        "LIKE",
        "LIKEDISLIKE",
        "REGULATOR",
        "FAVORITE",
        "RANKING",
      ],
    },
  },
}
`;

exports[`Survey Admin should update survey owned by User [Mutation] 1`] = `
Object {
  "updateSurvey": Object {
    "survey": Object {
      "creator": Object {
        "firstName": "Jane",
      },
      "description": "UpdatedSurveyDescription",
      "domains": Array [
        Object {
          "id": "624497235d090cf74bd2473155d6d65fb9f9395ec018192d181387e20f4cbf10",
        },
      ],
      "isActive": false,
      "questions": Array [
        Object {
          "id": "fd0dca1800e20d92ed5e3c01fafbd5f45b26f57d6e5118506eaf9eca7407e833",
        },
        Object {
          "id": "e657e852e504aceed834f2a001b0e5f0190e4f84730906990c6e6207769db48a",
        },
        Object {
          "id": "77bda58fad59e0b68a58f7b92cd4be87618046657ed45a965b23091d39203b2b",
        },
        Object {
          "id": "51593cf78e9828f700aa86f2d400e0497676610be878089d2268b1715d2ce980",
        },
        Object {
          "id": "0db66302ab707ff4cb22d52c7bf09fc238713dbcc9f0998c839162671df9c85b",
        },
        Object {
          "id": "b49c447e06d23454ba1b365c8884e8ca363575ae671dca4eb7fd78eaa3eca54e",
        },
      ],
      "title": "RenamedTestSurvey",
      "types": Array [
        "FAVORITE",
        "LIKE",
        "LIKEDISLIKE",
        "RANKING",
      ],
    },
  },
}
`;

exports[`Survey User should create survey [Mutation] 1`] = `
Object {
  "createSurvey": Object {
    "survey": Object {
      "creator": Object {
        "firstName": "John",
      },
      "description": "TestDescription",
      "domains": null,
      "isActive": false,
      "questions": null,
      "title": "TestSurvey",
      "types": null,
    },
  },
}
`;

exports[`Survey User should return all surveys [Query] 1`] = `
Object {
  "surveys": Array [
    Object {
      "creator": Object {
        "firstName": "John",
      },
      "description": "Eine wissenschaftliche Umfrage mit der Forschungsfrage: \\"Wie verhalten sich Informatiker?\\"",
      "domains": Array [
        Object {
          "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
        },
      ],
      "isActive": false,
      "questions": Array [
        Object {
          "id": "c237a33fc025101813b9bb9fbafe22fd9d53dbd110f48cec951fbeaf34ff3622",
        },
        Object {
          "id": "50ffe7d198c0f5dabda06fbb6db3ed4751eb2a1eb8032ac65bea6dbd4d68150a",
        },
        Object {
          "id": "b3c6a227951ed7b707222be79338c50c41ab7e51213551aabe48e0ee2148cbb6",
        },
        Object {
          "id": "534c13385adba70a40f9b898396e959e668dd1e0dc1e7de4c61c14d668965184",
        },
        Object {
          "id": "66ccc956897f52437656ba7e5588872baf213035f3a47a8bbae2b51289653078",
        },
        Object {
          "id": "2e26805e909bd52bf6aa07d4edce45575d6ba6f56e32b71f7466cda92f3ab76e",
        },
      ],
      "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
      "types": Array [
        "CHOICE",
        "LIKE",
        "LIKEDISLIKE",
        "REGULATOR",
        "FAVORITE",
        "RANKING",
      ],
    },
  ],
}
`;

exports[`Survey User should return survey owned by User [Query] 1`] = `
Object {
  "survey": Object {
    "creator": Object {
      "firstName": "John",
    },
    "description": "Eine wissenschaftliche Umfrage mit der Forschungsfrage: \\"Wie verhalten sich Informatiker?\\"",
    "domains": Array [
      Object {
        "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
      },
    ],
    "isActive": false,
    "questions": Array [
      Object {
        "id": "c237a33fc025101813b9bb9fbafe22fd9d53dbd110f48cec951fbeaf34ff3622",
      },
      Object {
        "id": "50ffe7d198c0f5dabda06fbb6db3ed4751eb2a1eb8032ac65bea6dbd4d68150a",
      },
      Object {
        "id": "b3c6a227951ed7b707222be79338c50c41ab7e51213551aabe48e0ee2148cbb6",
      },
      Object {
        "id": "534c13385adba70a40f9b898396e959e668dd1e0dc1e7de4c61c14d668965184",
      },
      Object {
        "id": "66ccc956897f52437656ba7e5588872baf213035f3a47a8bbae2b51289653078",
      },
      Object {
        "id": "2e26805e909bd52bf6aa07d4edce45575d6ba6f56e32b71f7466cda92f3ab76e",
      },
    ],
    "title": "Untersuchung zum Verhalten von Informatikern in Hochschulen",
    "types": Array [
      "CHOICE",
      "LIKE",
      "LIKEDISLIKE",
      "REGULATOR",
      "FAVORITE",
      "RANKING",
    ],
  },
}
`;

exports[`Survey User should update survey owned by User [Mutation] 1`] = `
Object {
  "updateSurvey": Object {
    "survey": Object {
      "creator": Object {
        "firstName": "John",
      },
      "description": "UpdatedSurveyDescription",
      "domains": Array [
        Object {
          "id": "d8134f182c41d3cf4e9fdcda2be39855d7f1530757f06392c615fe652edee1a2",
        },
      ],
      "isActive": false,
      "questions": Array [
        Object {
          "id": "c237a33fc025101813b9bb9fbafe22fd9d53dbd110f48cec951fbeaf34ff3622",
        },
        Object {
          "id": "50ffe7d198c0f5dabda06fbb6db3ed4751eb2a1eb8032ac65bea6dbd4d68150a",
        },
        Object {
          "id": "b3c6a227951ed7b707222be79338c50c41ab7e51213551aabe48e0ee2148cbb6",
        },
        Object {
          "id": "534c13385adba70a40f9b898396e959e668dd1e0dc1e7de4c61c14d668965184",
        },
        Object {
          "id": "66ccc956897f52437656ba7e5588872baf213035f3a47a8bbae2b51289653078",
        },
        Object {
          "id": "2e26805e909bd52bf6aa07d4edce45575d6ba6f56e32b71f7466cda92f3ab76e",
        },
      ],
      "title": "RenamedTestSurvey",
      "types": Array [
        "CHOICE",
        "LIKE",
        "LIKEDISLIKE",
        "REGULATOR",
        "FAVORITE",
        "RANKING",
      ],
    },
  },
}
`;
